# astropay

./: README.md
docs/: migration-policy.md
docs/reconciliation/: webhook-assumptions.md
rust-backend/: Cargo.toml  README.md
rust-backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  settle.rs  stellar.rs
rust-backend/src/handlers/: auth.rs  cron.rs  invoices.rs  misc.rs  mod.rs
usdc-payment-link-tool/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
usdc-payment-link-tool/app/: globals.css
usdc-payment-link-tool/app/api/cron/reconcile/: route.ts
usdc-payment-link-tool/app/api/cron/reconcile/replay/: route.ts
usdc-payment-link-tool/app/api/cron/settle/: route.ts
usdc-payment-link-tool/app/api/webhooks/stellar/: route.ts
usdc-payment-link-tool/app/pay/[publicId]/: page.tsx
usdc-payment-link-tool/components/: InvoiceCreateForm.tsx  PayWithFreighter.tsx  PaymentFailurePanel.tsx
usdc-payment-link-tool/lib/: data.ts  paymentFailure.test.ts  paymentFailure.ts  stellarPublicKey.ts  validators.ts
usdc-payment-link-tool/migrations/: 001_init.sql  002_merchant_wallet_key_indexes.sql  002_session_expiry_indexes.sql  003_invoice_metadata_jsonb_index_plan.sql  004_cron_runs.sql  005_invoice_last_checkout_attempt_at.sql  005_payout_dead_letter.sql  006_invoice_dashboard_index.sql  007_invoice_transaction_hash_unique.sql  007_payouts_queued_partial_index.sql
