[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
hex = "0.4.3"
http = "1.3.1"
jsonwebtoken = "9.3.1"
qrcode = "0.14.1"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stellar-strkey = "0.0.16"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
time = "0.3.47"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
